# taplo

./: .dockerignore  .gitignore  17-be3adb3c1067c3dbf6f7.js  17-be3adb3c1067c3dbf6f7.js.map  17-d9970ff5e2d932e33f39.js  17-d9970ff5e2d932e33f39.js.map  315c1764b2c3ca00db3754d1ba3a1f4a3cec1779-9d9a2bdba979a0530a4e.js  315c1764b2c3ca00db3754d1ba3a1f4a3cec1779-9d9a2bdba979a0530a4e.js.map  404.html  47290bdbdc671cad8090c4909710dfc9fb7a0d18-9d9a2bdba979a0530a4e.js  47290bdbdc671cad8090c4909710dfc9fb7a0d18-9d9a2bdba979a0530a4e.js.map  8a28b14e-f5d92e5da4815b31a905.js  8a28b14e-f5d92e5da4815b31a905.js.map  9f89de32-b952dc8629ff6a52c95b.js  9f89de32-b952dc8629ff6a52c95b.js.map  CNAME  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  action.yml  app-01436c32e3e57b43b0b5.js  app-01436c32e3e57b43b0b5.js.map  app-123d34c24bc702087ece.js  app-123d34c24bc702087ece.js.map  app-1516872fc7eff5b672cd.js  app-1516872fc7eff5b672cd.js.map  app-229ff43552d9f17e8fe9.js  app-229ff43552d9f17e8fe9.js.map  app-264c8e40855f68ce8d28.js  app-264c8e40855f68ce8d28.js.map  app-2accb9a5efe0c6161381.js  app-2accb9a5efe0c6161381.js.map  app-2be7a3ba97336189dc54.js  app-2be7a3ba97336189dc54.js.map  app-2e8bfe55c080b3449a88.js  app-2e8bfe55c080b3449a88.js.map  app-2f333608a30cc3033a69.js  app-2f333608a30cc3033a69.js.map  (+178 more)
404/: index.html
crates/lsp-async-stub/: Cargo.toml
crates/lsp-async-stub/src/: handler.rs  lib.rs  listen.rs  util.rs
crates/lsp-async-stub/src/listen/: stdio.rs  tcp.rs
crates/taplo/: CHANGELOG.md  Cargo.toml  README.md
crates/taplo-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/taplo-cli/src/: args.rs  lib.rs  log.rs  printing.rs
crates/taplo-cli/src/commands/: config.rs  format.rs  lint.rs  lsp.rs  mod.rs  queries.rs  toml_test.rs
crates/taplo-common/: CHANGELOG.md  Cargo.toml
crates/taplo-common/src/: config.rs  convert.rs  environment.rs  lib.rs  log.rs  plugin.rs  util.rs
crates/taplo-common/src/environment/: native.rs
crates/taplo-common/src/schema/: associations.rs  cache.rs  ext.rs  mod.rs
crates/taplo-lsp/: .gitignore  CHANGELOG.md  Cargo.toml
crates/taplo-lsp/src/: config.rs  diagnostics.rs  handlers.rs  lib.rs  lsp_ext.rs  msg_ext.rs  query.rs  world.rs
crates/taplo-lsp/src/handlers/: cargo.rs  code_action.rs  completion.rs  configuration.rs  conversion.rs  document_symbols.rs  documents.rs  folding_ranges.rs  formatting.rs  hover.rs  initialize.rs  links.rs  rename.rs  schema.rs  semantic_tokens.rs  workspaces.rs
crates/taplo-lsp/src/handlers/cargo/: code_action.rs  completion.rs  top_1000_recent_crates.txt
crates/taplo-lsp/src/lsp_ext/: notification.rs  request.rs
crates/taplo-plugin-crates/: Cargo.toml
crates/taplo-plugin-crates/src/: lib.rs
crates/taplo-wasm/: Cargo.toml
crates/taplo-wasm/.cargo/: config.toml
crates/taplo-wasm/src/: environment.rs  lib.rs  lsp.rs
crates/taplo/benches/: parser.rs  profile.rs  taplo.rs
crates/taplo/examples/: parse.rs
crates/taplo/src/: lib.rs  syntax.rs  value.rs
crates/taplo/src/dom/: error.rs  from_syntax.rs  index.rs  mod.rs  node.rs  rewrite.rs  serde.rs  to_toml.rs
crates/taplo/src/dom/node/: nodes.rs
crates/taplo/src/formatter/: macros.rs  mod.rs
crates/taplo/src/parser/: macros.rs  mod.rs
crates/taplo/src/tests/: formatter.rs  mod.rs  rewrite.rs
crates/taplo/src/util/: escape.rs  iter.rs  mod.rs  shared.rs  syntax.rs
lsp-async-stub/: Cargo.toml  README.md
lsp-async-stub/src/: handler.rs  lib.rs  listen.rs  rpc.rs
lsp-async-stub/src/impls/native/: mod.rs
lsp-async-stub/src/impls/wasm32/: mod.rs
lsp-async-stub/src/listen/: stdio.rs  tcp.rs
taplo/: CHANGELOG.md  Cargo.toml  README.md
taplo-cli/: Cargo.toml  README.md
taplo-cli/src/: config.rs  external.rs  format.rs  lib.rs  lint.rs  toml_test.rs  util.rs
taplo-ide/: Cargo.toml
taplo-ide/schemas/: Cargo.json  README.md  cargo.json  pyproject.json  pyproject.yaml  taplo.json
taplo-ide/src/: analytics.rs  handlers.rs  lib.rs  request_ext.rs  schema.rs
taplo-ide/src/handlers/: completion.rs  diagnostics.rs  document_symbols.rs  folding_ranges.rs  semantic_tokens.rs
taplo-ide/src/schema/: mod.rs
taplo-ide/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tslint.json  webpack.config.js  webpack.config.server.js
taplo-ide/vscode/sample/: example-v0.4.0.toml
taplo-ide/vscode/src/: extension.ts  requestExt.ts  server.ts  util.ts
taplo-ide/vscode/src/commands/: debug.ts  index.ts  tomlToJson.ts
taplo-ide/vscode/src/syntax/: README.md  index.ts
taplo-ide/vscode/src/syntax/composite/: array.ts  entry.ts  table.ts  value.ts
taplo-ide/vscode/src/syntax/literal/: boolean.ts  number.ts
taplo-lsp/: Cargo.toml  README.md
taplo-lsp/scripts/: test_input.py
taplo-lsp/src/: handlers.rs  lib.rs  msg_ext.rs
taplo-lsp/src/handlers/: code_action.rs  completion.rs  diagnostics.rs  document_symbols.rs  folding_ranges.rs  semantic_tokens.rs
taplo-lsp/src/utils/: mod.rs
taplo-lsp/tests/: taplo_lsp.rs
taplo/benches/: benches.rs
taplo/examples/: parse.rs  taplo_parse.rs  toml_rs_parse.rs
taplo/schemas/: Cargo.json  rustfmt.json
taplo/src/: analytics.rs  dom.rs  formatter.rs  lib.rs  macros.rs  parser.rs  schema.rs  serde.rs  syntax.rs  value.rs  verify.rs  wasm.rs
taplo/src/dom/: macros.rs  mod.rs
taplo/src/dom/rewrite/: builders.rs  impls.rs  mod.rs
taplo/src/formatter/: macros.rs  mod.rs
taplo/src/parser/: macros.rs  mod.rs
taplo/src/tests/: analytics.rs  benches.rs  formatter.rs  mod.rs  rewrite.rs
taplo/src/util/: coords.rs  escape.rs  mod.rs  syntax.rs
util/schema-gen/: Cargo.toml
util/schema-gen/descriptions/cargo/: badges.md  build-dependencies.md  dependencies.md  dev-dependencies.md  features.md  lib.md  patch.md  profile.md  profiles_bench.md  profiles_dev.md  profiles_release.md  profiles_test.md  semver_req.md
util/schema-gen/src/: main.rs
util/schema-gen/src/defs/: cargo.rs  mod.rs
util/schema-index/: Cargo.toml
util/schema-index/src/: main.rs
util/test-gen/: Cargo.toml  README.md
util/test-gen/src/: main.rs
(+931 files in other folders)
