[workspace]
exclude = ["util/test-gen"]
members = ["crates/*"]

resolver = "2"

[workspace.package]
authors      = ["tamasfe"]
edition      = "2021"
license      = "MIT"
rust-version = "1.74"
homepage     = "https://taplo.tamasfe.dev"
repository   = "https://github.com/tamasfe/taplo"

[workspace.dependencies]
ahash              = { version = "0.8.4" }
anyhow             = { version = "1.0.53" }
arc-swap           = { version = "1.5.0" }
async-trait        = { version = "0.1.52" }
clap               = { version = "4.5.31", default-features = false, features = ["std"] }
either             = { version = "1.6.1" }
futures            = { version = "0.3.30" }
getrandom          = { version = "0.2", default-features = false }
glob               = { version = "0.3" }
globset            = { version = "0.4.8" }
hex                = { version = "0.4" }
indexmap           = { version = "2.2" }
itertools          = { version = "0.10.3" }
lsp-types          = { version = "0.93.0" }
once_cell          = { version = "1.4" }
parking_lot        = { version = "0.12.0" }
regex              = { version = "1.5" }
reqwest            = { version = "0.11.9", default-features = false }
rowan              = { version = "0.15.3" }
schemars           = { version = "0.8.3" }
serde              = { version = "1" }
serde_json         = { version = "1.0.78" }
sha1               = { version = "0.10.5" }
tap                = { version = "1.0.1" }
thiserror          = { version = "1.0.30" }
time               = { version = "0.3.7" }
tokio              = { version = "1.24.2", default-features = false }
toml               = { version = "0.7" }
tracing            = { version = "0.1.30" }
tracing-subscriber = { version = "0.3.7" }
url                = { version = "2.2.2" }

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
strip         = true


[profile.bench]
lto       = true
opt-level = 3
