[build-system]
requires      = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "taplo"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["version"]

[tool.maturin]
bindings      = "bin"
manifest-path = "crates/taplo-cli/Cargo.toml"
