[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
edition = "2018"
name = "lsp-async-stub"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
futures = "0.3.5"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
lsp-types = { package = "tamasfe-lsp-types", version = "0.85", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
dyn-clone = "1"
