[package]
authors = ["tamasfe"]
description = "An LSP server stub for futures"
edition = "2018"
name = "lsp-async-stub"
version = "0.3.1"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.30"
dyn-clone = "1"
futures = "0.3.5"
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
lsp-types = { version = "0.90" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12.0", optional = true }
tracing = "0.1.29"

[features]
default = ["send"]
send = []
tokio-stdio = [
    "tokio",
    "tokio/io-util",
    "tokio/io-std",
    "tokio/macros",
]
tokio-tcp = [
    "tokio",
    "tokio/io-util",
    "tokio/net",
    "tokio/macros",
]
