[package]
authors = ["tamasfe"]
edition = "2018"
name = "taplo-cli"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["tokio-compat-02"]

# Internal use only
internal-wasm-testing = []
internal-node = ["console_error_panic_hook"]

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["suggestions", "std", "cargo"] }
console_error_panic_hook = { version = "0.1", optional = true }
glob = "0.3"
js-sys = "0.3"
once_cell = "1.4"
pretty-lint = { version = "0.1", path = "../../pretty-lint" }
schemars = "0.8"
serde = "1"
serde_json = "1"
taplo = { version = "*", path = "../taplo", features = ["serde", "verify", "schemars"] }
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
anyhow = "1"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
tokio = { version = "0.3", features = ["rt-multi-thread", "macros"] }
tokio-compat-02 = { version = "0.1", optional = true }

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
