[package]
authors = ["tamasfe"]
description = "A CLI for Taplo"
license = "MIT"
edition = "2018"
name = "taplo-cli"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
anyhow = "1"
clap = { package = "tamasfe-clap", version = "3.0.0-beta.2", features = ["suggestions", "std", "cargo"] }
futures = "0.3"
glob = "0.3"
once_cell = "1.4"
pretty-lint = { version = "0.1" }
reqwest = { version = "0.10", features = ["json"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
taplo = { version = "0.2", features = ["serde", "verify", "schema"] }
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.3", features = ["rt-multi-thread", "macros"] }
tokio-compat-02 = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1" }

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
