[package]
authors = ["tamasfe"]
description = "A CLI for Taplo TOML toolkit"
license = "MIT"
edition = "2018"
name = "taplo-cli"
version = "0.5.0"
homepage = "https://taplo.tamasfe.dev"
repository = "https://github.com/tamasfe/taplo"
categories = ["development-tools", "command-line-utilities"]
keywords = ["toml", "linter", "formatter"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

# In order to output anything on nightly wasm, an unstable feature
# `set_stdio` must be used right now.
nightly = []

[dependencies]
anyhow = "1"
clap = { package = "tamasfe-clap", version = "3.0.0-beta.2", features = ["suggestions", "std", "cargo"] }
futures = "0.3"
glob = "0.3"
hex = "0.4"
once_cell = "1.4"
pretty-lint = { version = "0.1" }
regex = "1.4"
reqwest = { version = "0.11.4", features = ["json"] }
schemars = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.9"
taplo = { version = "0.7.0", path = "../taplo", features = ["serde", "verify", "schema"] }
time = "0.2"
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1" }

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
