[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
edition = "2018"
name = "taplo-ide"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "*"
async-trait = "0.1.30"
futures = "0.3.5"
indexmap = "1.4.0"
itertools = "0.9"
js-sys = "0.3.39"
lsp-async-stub = { version = "0.1.1", path = "../lsp-async-stub" }
lsp-types = { version = "0.74.1", features = ["proposed"] }
once_cell = "1.3.1"
pathdiff = "0.2"
regex = "1.3"
reqwest = { version = "0.10", features = ["json"] }
rowan = "0.10.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
smallvec = "1.4"
taplo = { version = "0.2.1", features = ["serde", "verify"] }
taplo-cli = { version = "0.1.0" }
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.12"

console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
