[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
description = "Language server for Taplo"
edition = "2018"
name = "taplo-lsp"
version = "0.1.0"
license = "MIT"
homepage = "https://taplo.tamasfe.dev"
repository = "https://github.com/tamasfe/taplo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3.5"
hex = "0.4"
indexmap = "1.6"
itertools = "0.9"
lsp-async-stub = { version = "0.1.1", path = "../lsp-async-stub" }
lsp-types = { package = "tamasfe-lsp-types", version = "0.85.0", features = ["proposed"] }
once_cell = "1.5"
pathdiff = "0.2"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
rowan = "0.10.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
smallvec = "1.5"
taplo = { version = "0.5.2", path = "../taplo", features = ["serde", "verify", "schema"] }
taplo-cli = { version = "0.3.0", path = "../taplo-cli" }
time = "0.2"
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "net",
    "time",
    "process",
] }
tokio-compat-02 = { version = "0.1" }
clap = "3.0.0-beta.2"
ctrlc = "3"
notify = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1" }
js-sys = "0.3"

[dev-dependencies]
pretty_assertions = "0.6"
wasm-bindgen-test = "0.3"

[[bin]]
name = "taplo-lsp"
path = "bin/lsp/main.rs"

[[test]]
name = "taplo_lsp"
path = "tests/taplo_lsp.rs"
