[package]
authors = ["tamasf97 <tamasf97@outlook.com>"]
description = "Language server for Taplo"
edition = "2018"
name = "taplo-lsp"
version = "0.2.1"
license = "MIT"
homepage = "https://taplo.tamasfe.dev"
repository = "https://github.com/tamasfe/taplo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3.5"
hex = "0.4"
indexmap = "1.6"
itertools = "0.10.1"
lsp-types = { version = "0.91.0", features = ["proposed"] }
once_cell = "1.5"
parking_lot = "0.11.2"
pathdiff = "0.2"
percent-encoding = "2.1.0"
regex = "1.4"
reqwest = { version = "0.11.4", features = ["json"] }
rowan = "0.14.1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
smallvec = "1.5"
taplo = { version = "0.8.0", path = "../taplo", features = [
    "serde",
    "verify",
    "schema",
] }
taplo-cli = { version = "0.6.0", path = "../taplo-cli" }
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.5"
verify = { version = "0.3", features = ["schemars"] }
lsp-async-stub = { version = "0.4.0", path = "../lsp-async-stub" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "net",
    "time",
    "process",
] }
clap = { version = "3.0.0", features = ["derive", "cargo"] }
ctrlc = "3"
notify = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1" }
js-sys = "0.3"

[dev-dependencies]
pretty_assertions = "1.0.0"
wasm-bindgen-test = "0.3"

[[bin]]
name = "taplo-lsp"
path = "bin/lsp/main.rs"

[[test]]
name = "taplo_lsp"
path = "tests/taplo_lsp.rs"
