[package]
authors = ["tamasfe"]
categories = ["parser-implementations", "parsing"]
description = "A TOML parser, analyzer and formatter library"
edition = "2018"
homepage = "https://github.com/tamasfe/taplo"
keywords = ["toml", "parser", "formatter", "linter"]
license = "MIT"
name = "taplo"
readme = "../README.md"
repository = "https://github.com/tamasfe/taplo"
version = "0.4.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["serde_crate", "serde_json"]
schema = ["once_cell", "schemars", "serde"]
rewrite = []

[dependencies]
glob = "0.3"
indexmap = "1"
logos = "0.11.4"
lsp-types = ">=0.79, <0.82"
regex = "1"
rowan = "0.10.0"
smallvec = "1"

chrono = { version = "0.4", optional = true }
time = { version = "0.2", optional = true }

once_cell = { version = "1", optional = true }
schemars = { version = "0.8", optional = true }
serde_crate = { package = "serde", version = "1", optional = true }
serde_json = { version = "1", optional = true }
verify = { version = "0.3", features = ["schemars", "serde"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
assert-json-diff = "1"
serde_json = "1"
toml = "0.5"

[package.metadata.docs.rs]
features = ["serde", "schema", "chrono", "rewrite"]
