[package]
authors = ["tamasfe"]
categories = ["parser-implementations", "parsing"]
description = "A TOML parser, analyzer and formatter library"
edition = "2018"
homepage = "https://taplo.tamasfe.dev"
keywords = ["toml", "parser", "formatter", "linter"]
license = "MIT"
name = "taplo"
readme = "../README.md"
repository = "https://github.com/tamasfe/taplo"
version = "0.5.2"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["serde_crate", "serde_json"]
schema = ["once_cell", "schemars", "serde"]
rewrite = []

[dependencies]
glob = "0.3"
indexmap = "1"
logos = "0.11.4"
regex = "1"
rowan = "0.10.0"
semver = { version = "0.11", features = ["serde"] }
smallvec = "1"

chrono = { version = "0.4", optional = true }
time = { version = "0.2", optional = true }

once_cell = { version = "1", optional = true }
schemars = { version = "0.8", optional = true }
serde_crate = { package = "serde", version = "1", optional = true }
serde_json = { version = "1", optional = true }
verify = { version = "0.3", features = ["schemars", "serde"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
toml = "0.5"

[dev-dependencies]
assert-json-diff = "2"
serde_json = "1"
toml = "0.5"

[package.metadata.docs.rs]
features = ["serde", "schema", "chrono", "rewrite"]
