[package]
authors = ["tamasfe"]
description = "An LSP server stub for futures"
edition = "2021"
license = "MIT"
name = "lsp-async-stub"
version = "0.6.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
lsp-types = { version = "0.93.0" }
rowan = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.24.2", default-features = false, optional = true }
tracing = { workspace = true }

[features]
default = []
tokio-stdio = [
  "tokio",
  "tokio/rt",
  "tokio/io-util",
  "tokio/io-std",
  "tokio/macros",
]
tokio-tcp = ["tokio", "tokio/rt", "tokio/io-util", "tokio/net", "tokio/macros"]

[package.metadata.auto-tag]
enabled = true
