[package]
name         = "lsp-async-stub"
description  = "An LSP server stub for futures"
version      = "0.6.4"
rust-version = "1.77"                           # via rowan
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
getrandom   = { workspace = true, features = ["wasm-bindgen", "js"] }
lsp-types   = { workspace = true }
rowan       = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
tokio       = { workspace = true, optional = true }
tracing     = { workspace = true }

[features]
default     = []
tokio-stdio = ["tokio", "tokio/rt", "tokio/io-util", "tokio/io-std", "tokio/macros"]
tokio-tcp   = ["tokio", "tokio/rt", "tokio/io-util", "tokio/net", "tokio/macros"]

[package.metadata.auto-tag]
enabled = true
