[package]
name         = "lsp-async-stub"
description  = "An LSP server stub for futures"
version      = "0.7.0"
rust-version = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
getrandom   = { workspace = true, features = ["wasm-bindgen", "js"] }
lsp-types   = { workspace = true }
rowan       = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
tokio       = { workspace = true, optional = true }
tracing     = { workspace = true }

[features]
default     = []
tokio-stdio = ["tokio", "tokio/io-std", "tokio/io-util", "tokio/macros", "tokio/rt"]
tokio-tcp   = ["tokio", "tokio/io-util", "tokio/macros", "tokio/net", "tokio/rt"]

[package.metadata.auto-tag]
enabled = true
