[package]
name         = "taplo-cli"
description  = "A CLI for Taplo TOML toolkit"
version      = "0.9.4-rc.1"
rust-version = "1.70"
categories   = ["development-tools", "command-line-utilities"]
keywords     = ["toml", "linter", "formatter"]
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[features]
default    = ["rustls-tls", "lsp", "toml-test"]
lsp        = ["taplo-lsp", "async-ctrlc"]
native-tls = ["taplo-common/native-tls", "taplo-lsp?/native-tls"]
rustls-tls = ["taplo-common/rustls-tls", "taplo-lsp?/rustls-tls"]
toml-test  = []
vendored-openssl = ["openssl"]

[dependencies]
taplo        = { path = "../taplo", features = ["serde"] }
taplo-common = { path = "../taplo-common" }
taplo-lsp    = { path = "../taplo-lsp", default-features = false, optional = true }

anyhow             = { workspace = true, features = ["backtrace"] }
clap               = { version = "4", features = ["derive", "cargo", "env"] }
codespan-reporting = { version = "0.11.1" }
futures            = { workspace = true }
glob               = { workspace = true }
hex                = { workspace = true }
itertools          = { workspace = true }
once_cell          = { workspace = true }
openssl = { version = "*", features = ["vendored"], optional = true }
regex              = { workspace = true }
reqwest            = { workspace = true, features = ["json"] }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
time               = { workspace = true, features = ["parsing"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url                = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ansi_term      = { version = "0.12" }
async-ctrlc    = { version = "1.2.0", features = ["stream"], optional = true }
atty           = { version = "0.2.14" }
lsp-async-stub = { path = "../lsp-async-stub", features = ["tokio-tcp", "tokio-stdio"] }
# `prettydiff` is also a CLI that pulls in `clap` by default
prettydiff = { version = "0.6.1", default-features = false }
tokio      = { workspace = true, features = ["sync", "fs", "time", "io-std", "rt-multi-thread", "parking_lot"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "parking_lot", "io-util"] }

[package.metadata.auto-tag]
enabled = true

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
