[package]
name         = "taplo-cli"
description  = "A CLI for Taplo TOML toolkit"
version      = "0.9.3"
rust-version = "1.71"
categories   = ["development-tools", "command-line-utilities"]
keywords     = ["toml", "linter", "formatter"]
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[features]
default    = ["lint", "lsp", "rustls-tls", "toml-test"]
lint       = ["taplo-common/schema", "taplo-common/reqwest", "reqwest"]
lsp        = ["async-ctrlc", "taplo-lsp", "lint"]
native-tls = ["taplo-common/native-tls", "taplo-lsp?/native-tls"]
rustls-tls = ["taplo-common/rustls-tls", "taplo-lsp?/rustls-tls"]
toml-test  = ["lint"]

[dependencies]
taplo        = { path = "../taplo", features = ["serde"] }
taplo-common = { path = "../taplo-common" }
taplo-lsp    = { path = "../taplo-lsp", default-features = false, optional = true }

anyhow             = { workspace = true, features = ["backtrace"] }
clap               = { workspace = true, features = ["derive", "cargo", "env", "default"] }
codespan-reporting = { version = "0.11.1" }
futures            = { workspace = true }
glob               = { workspace = true }
hex                = { workspace = true }
itertools          = { workspace = true }
once_cell          = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true, features = ["json"], optional = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
time               = { workspace = true, features = ["parsing"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url                = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ansi_term      = { version = "0.12" }
async-ctrlc    = { version = "1.2.0", features = ["stream"], optional = true }
lsp-async-stub = { path = "../lsp-async-stub", features = ["tokio-tcp", "tokio-stdio"] }
# `prettydiff` is also a CLI that pulls in `clap` by default
prettydiff = { version = "0.6.1", default-features = false }
tokio      = { workspace = true, features = ["sync", "fs", "time", "io-std", "rt-multi-thread", "parking_lot"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "parking_lot", "io-util"] }

[package.metadata.auto-tag]
enabled = true

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
