[package]
name         = "taplo-cli"
description  = "A CLI for Taplo TOML toolkit"
version      = "0.10.0"
categories   = ["development-tools", "command-line-utilities"]
keywords     = ["toml", "linter", "formatter"]
rust-version = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[features]
default     = ["completions", "lint", "lsp", "rustls-tls", "toml-test"]
lint        = ["reqwest", "taplo-common/reqwest", "taplo-common/schema"]
lsp         = ["async-ctrlc", "lint", "taplo-lsp"]
native-tls  = ["taplo-common/native-tls", "taplo-lsp?/native-tls"]
rustls-tls  = ["taplo-common/rustls-tls", "taplo-lsp?/rustls-tls"]
toml-test   = ["lint"]
completions = ["dep:clap_complete"]

[dependencies]
taplo        = { version = "0.14.0", path = "../taplo", features = ["serde"] }
taplo-common = { version = "0.6.0", path = "../taplo-common" }
taplo-lsp    = { version = "0.8.0", path = "../taplo-lsp", default-features = false, optional = true }

anyhow             = { workspace = true }
clap               = { workspace = true, features = ["derive", "cargo", "env", "default"] }
codespan-reporting = { version = "0.11.1" }
futures            = { workspace = true }
glob               = { workspace = true }
hex                = { workspace = true }
itertools          = { workspace = true }
once_cell          = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true, features = ["json"], optional = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
time               = { workspace = true, features = ["parsing"] }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url                = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
lsp-async-stub = { version = "0.7.0", path = "../lsp-async-stub", features = ["tokio-tcp", "tokio-stdio"] }

ansi_term     = { version = "0.12" }
async-ctrlc   = { version = "1.2.0", features = ["stream"], optional = true }
clap_complete = { version = "4.4.18", optional = true }
prettydiff    = { version = "0.6.1", default-features = false }               # `prettydiff` is also a CLI that pulls in `clap` by default

tokio = { workspace = true, features = ["sync", "fs", "time", "io-std", "rt-multi-thread", "parking_lot"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["sync", "parking_lot", "io-util"] }

[package.metadata.auto-tag]
enabled = true

[[bin]]
name = "taplo"
path = "bin/taplo.rs"
