[package]
authors      = { workspace = true }
description  = "Shared code for taplo utilities."
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
name         = "taplo-common"
repository   = { workspace = true }
rust-version = "1.67"
version      = "0.5.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taplo = { path = "../taplo", features = ["schema"] }

ahash              = { workspace = true, features = ["serde"] }
anyhow             = { workspace = true, features = ["backtrace"] }
arc-swap           = { workspace = true }
async-recursion    = { version = "1.0.0" }
async-trait        = { workspace = true }
atty               = { version = "0.2.14" }
futures            = { workspace = true }
glob               = { workspace = true }
globset            = { workspace = true }
hex                = { workspace = true }
indexmap           = { workspace = true, features = ["serde", "rayon"] }
itertools          = { workspace = true }
json_value_merge   = { version = "2.0.0" }
jsonschema         = { version = "0.17.1", default-features = false }
lru                = { version = "0.11.1" }
parking_lot        = { workspace = true }
percent-encoding   = { version = "2.1.0" }
regex              = { workspace = true }
reqwest            = { workspace = true, features = ["json"] }
schemars           = { version = "0.8.8", features = ["url"] }
semver             = { version = "1.0.5", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { workspace = true, features = ["preserve_order"] }
sha1               = { workspace = true }
tap                = { workspace = true }
thiserror          = { workspace = true }
time               = { workspace = true, features = ["serde"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url                = { workspace = true, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.2", features = [
  "sync",
  "fs",
  "time",
  "io-std",
  "parking_lot",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.24.2", features = [
  "sync",
  "parking_lot",
  "io-util",
], default-features = false }

[features]
# default-tls enables native-tls but without enabling native-tls specific features.
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.auto-tag]
enabled = true
